# fireworks

./: .clang-format  .gitatrributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.go  build.md  go.mod  go.sum  license.md  main.go  readme.md  roadmap.md  roadmap_de.md
.github/workflows/: analyze_app.yml  analyze_build.yml  build_clang.yml  build_dart.yml  workflow_snap_test.yml
.run/: runner.run.xml
app/: app.build.dart  modspec.dart  pubspec.yaml
app/lib/: environment.dart  runner.dart
app/lib/command/: command.dart  doctor.dart  root.dart  runner.dart
app/lib/command/execute/: create.dart  doctor.dart
app/lib/execution/: doctor.dart
app/resources/: vendor_artifacts.json
app/resources/templates/projects/app/assets/models/tree/: tree.json
app/resources/templates/projects/app/assets/textures/item/fire_sword/: fire_sword.json
app/resources/templates/projects/app/assets/worlds/aether/: aether.json
app/resources/templates/projects/app/private/maps/: aether.dart
app/resources/templates/projects/app/public/: NAME.dart
app/resources/templates/projects/standard/: modspec.dart
app/resources/templates/projects/standard/public/: project_lib.h
application/interface/cmdline/src/: main.c
cmd/: build.go  create.go  doctor.go  editor.go  get.go  repair.go  root.go  run.go  update.go  version.go
cmdline/: go.mod  readme.md
cmdln/: go.mod  main.go
cmdln/cmd/: root.go
cmdln/cmd/pub/: get.go
editor/: CMakeLists.txt  pubspec.yaml  readme.md
editor/web-host/: go.mod  main.go
editor/web-host/cmd/: root.go
editor/web-view/: CMakeLists.txt
editor/web-view/lib/: main.dart
editor/web-view/test/: widget_test.dart
editor/web-view/web/: index.html
editor/webview/: CMakeLists.txt  pubspec.yaml
editor/webview/lib/: main.dart
engine/: CMakeLists.txt  engine.cmake
engine/cmake/module_system/: registerModule.cmake
engine/interface/: CMakeLists.txt
engine/interface/editor_app/: CMakeLists.txt
engine/interface/web_app/: .gitignore  CMakeLists.txt  pubspec.yaml
engine/interface/web_host/: CMakeLists.txt
engine/interface/web_ui/surfaces/: README.md
engine/interface/web_ui/surfaces/test/: widget_test.dart
engine/interface/web_ui/surfaces/web/: manifest.json
engine/interface/web_ui/view_port/: CMakeLists.txt
engine/modules/main/private/: main.cpp
engine/modules/platform/: core_requirements.md
engine/modules/render/private/: render.c
engine/modules/renderer/: renderer.mod.dart
engine/modules/renderer/private/: renderer.c
engine/runtime/: CMakeLists.txt  readme.md
engine/runtime/global/: stdpch.h
engine/runtime/modules/core/: core.cmake
engine/runtime/modules/core/private/: logger.c  test.c
engine/runtime/modules/core/public/: common.h  test.h
engine/runtime/platform/private/: common.c  parse.c
engine/runtime/tests/: CMakeLists.txt  main_test.c
fireworks/cmdline/: CMakeLists.txt  main.go
fireworks/cmdline/cmd/: root.go
fireworks/cmdline/cmd/editor/: send.go
fireworks/cmdline/pkg/: CMakeLists.txt
fireworks/cmdline/pkg/fireworks_builder/: go.mod
fireworks/cmdline/pkg/fireworks_editor_host/: go.mod
fireworks/runtime/platform/public/: parse.h
internal/data/: CMakePresets.json  dependencies.yaml  presets.json  project.json  target_presets.md  vendor_artifacts.json
internal/data/templates/std-basic/: modspec.dart
internal/source/: archive.go  data.go  download.go  presets.go  route.go  step.go
internal/source/bundle/: artifact.go  bundle.go
internal/source/cache/: artifact.go  bundle.go
internal/source/env/: artifacts.go  data.go  presets.go
main/: .gitignore  CMakeLists.txt  go.mod  main.go
main/cmd/: pub.go  root.go
main/cmd/pub/: get.go
main/config/: settings.yaml
main/resrc/: readme.md
runner/: CMakeLists.txt  go.mod  go.sum  main.go
runner/cmd/: pub.go  root.go
runner/cmd/pub/: get.go
runner/src/: main.go
runtime/: modspec.dart  readme.md
runtime/core/modules/platform/private/: common.c
runtime/main/private/: main.cpp
runtime/modules/platform/private/: logger.c
runtime/modules/platform/public/: common.h  logger.h  parse.h
runtime/modules/render/: .gitignore  modspec.dart
runtime/modules/render/private/: renderer.c
runtime/modules/renderer/private/: renderer.c
runtime/platform/private/: logger.c  parse.c
runtime/platform/public/: logger.h
runtime/renderer/: module.spec.dart  renderer.mod.dart
test/: root_test.go
tools/: readme.md
tools/gendoc/: CMakeLists.txt  gen_docs.spec  gendoc.readme
tools/onworks/: readme.md
tools/tailwork/: readme.md
